# coolcalc

./: LICENSE.txt  README-git.md  pyproject.toml
.github/: README.md
src/coolcalc/: __about__.py  __init__.py  __main__.py  calc.py  graph_calc.py  menu.py  menu_command.py  settings.py
src/coolcalc/locales/en/LC_MESSAGES/: app.po  menu.po  settings.po
src/coolcalc/locales/ru/LC_MESSAGES/: app.po  menu.po  settings.po
tests/: __init__.py  test_calc.py
